--- a/pet-adoption-api/build.gradle
+++ b/pet-adoption-api/build.gradle
@@ -26,13 +26,15 @@ dependencies {
 	// The versions of all of these are managed by Spring's dependency management Gradle plugin
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.security:spring-security-test'
 	runtimeOnly 'com.mysql:mysql-connector-j'
+
+	// Spring Security - you'll need this, but not immediately; here they are for when you are ready though!
+	// implementation 'org.springframework.boot:spring-boot-starter-security'
+	// testImplementation 'org.springframework.security:spring-security-test'
 
 	// Utility libraries
 	implementation 'com.google.guava:guava:33.0.0-jre'
